<resources>
    <string name="app_name">PathBuffs</string>
    <string name="Cast">Cast</string>
    <string name="Mutagen">Mutagen</string>
    <string name="Dispel">Dispel</string>
    <string name="Active_Buffs">Active Buffs</string>
    <string name="PathBuffs">PathBuffs</string>
    <string name="Menu">Menu</string>
    <string name="Stats">Stats</string>
    <string name="title_activity_menu_drawer">MenuDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="QuickCast">Quick Cast</string>
    <string name="search_spells">Search Spells</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="_2_handed">2-Handed</string>
    <string name="_1_handed">1-Handed</string>
    <string name="weapon_specialization">Weapon Specialization</string>
    <string name="weapon_training">Weapon Training</string>
    <string name="weapon_focus">Weapon Focus</string>
    <string name="power_attack">Power Attack</string>
    <string name="attack">Attack</string>
    <string name="damage">Damage</string>
    <string name="dedicated_adversary">Dedicated Adversary</string>
    <string name="brawler_s_flurry">Brawler\'s Flurry</string>
    <string name="calculate_bonus">Calculate Bonus</string>
    <string name="modifier">Modifier</string>
    <string name="ability_score">Ability Score</string>
    <string name="attribute">Attribute</string>
    <string name="edit">Edit</string>
    <string name="str">STR</string>
    <string name="dex">DEX</string>
    <string name="con">CON</string>
    <string name="intel">INT</string>
    <string name="wis">WIS</string>
    <string name="cha">CHA</string>
    <string name="choose_profile">Choose Character</string>
    <string name="add">Add</string>
    <string name="bab">BAB:</string>
    <string name="level">Level:</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="delete">Delete</string>
    <string name="calculate_bonuses">Calculate Bonuses</string>
    <string name="active_spells">Active Spells</string>
    <string name="spells">Spells</string>
    <string name="set_stats">Set Stats</string>
    <string name="title_activity_buff_tracking">BuffTrackingActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="cast_spell">Cast Spell</string>
    <string name="m">M</string>
    <string name="weapon_enhancement">Weapon Enhancement</string>
    <string-array name="style_of_attack">
        <item>One-Handed</item>
        <item>Two-Handed</item>
        <item>Thrown</item>
        <item>Ranged</item>
    </string-array>
    <string name="title_activity_all_feats">allFeats</string>
    <string name="title_activity_profile_feats">profileFeats</string>
    <string name="title_activity_character">Character</string>
    <string name="flanking">Flanking</string>
</resources>
