<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Activity_Attack">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:orientation="horizontal"
            android:paddingTop="30dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cbx_powerAttack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/power_attack" />

                <CheckBox
                    android:id="@+id/cbx_weaponFocus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weapon_focus" />

                <CheckBox
                    android:id="@+id/cbx_weaponTraining"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weapon_training" />

                <CheckBox
                    android:id="@+id/cbx_weaponSpecilization"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weapon_specialization" />

                <CheckBox
                    android:id="@+id/cbx_dedicatedAdversary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dedicated_adversary" />

                <CheckBox
                    android:id="@+id/cbx_twoWeapon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brawler_s_flurry" />
            </LinearLayout>

        <RadioGroup
            android:id="@+id/rgroup_hand"
            android:layout_width="108dp"
            android:layout_height="65dp"
            android:checkedButton="@+id/rbtn_1hand">

            <RadioButton
                android:id="@+id/rbtn_1hand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_1_handed" />

            <RadioButton
                android:id="@+id/rbtn_2hand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_2_handed" />
        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Calculate"
            android:layout_gravity="center"
            />


    </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>