<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spn_select_profile"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:prompt="@string/choose_profile">

        </Spinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/add"
                android:onClick="addProfile"/>
            <Button
                android:id="@+id/edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/edit" />

            <Button
                android:id="@+id/delete_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/delete"
                android:onClick="deleteProfile"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:paddingRight="30dp"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/txt_level_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level"
                android:paddingLeft="5dp"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/txt_profile_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9"
                android:paddingRight="25dp"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/txt_bab_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bab"
                android:paddingLeft="5dp"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/txt_profile_bab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9"
                android:textSize="18sp"
                />

        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/txt_titles_of_stats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/txt_attribute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:text="@string/attribute"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:text="@string/ability_score"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:text="@string/modifier"
                    android:textSize="18sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:paddingTop="20dp"
                android:layout_alignTop="@+id/txt_titles_of_stats">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/txt_str"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        />
                    <TextView
                        android:id="@+id/txt_dex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dex"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        />
                    <TextView
                        android:id="@+id/txt_con"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/con"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        />
                    <TextView
                        android:id="@+id/txt_int"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/intel"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        />
                    <TextView
                        android:id="@+id/txt_wis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/wis"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        />
                    <TextView
                        android:id="@+id/txt_cha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cha"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_ability"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_modifier"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>