<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.start_up">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            android:id="@+id/btn_set_stats"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/set_stats"
            android:onClick="gotToActivity"/>
        <Button
            android:id="@+id/btn_cast_spells"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="gotToActivity"
            android:text="@string/spells" />
        <Button
            android:id="@+id/btn_active_spells"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/active_spells"
            android:onClick="gotToActivity"/>
        <Button
            android:id="@+id/btn_calculate_bonuses"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/calculate_bonuses"
            android:onClick="gotToActivity"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>